[tool.poetry]
name = "discord avatar manager"
version = "0.1.0"
description = ""
authors = ["Catdrout <c4tdrout@protonmail.com>"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = { version = "^2.4.1", source = "pytorch" }
torchvision = { version = "^0.15.1", source = "pytorch" }
torchaudio = { version = "^2.0.1", source = "pytorch" }
beautifulsoup4 = "^4.12.3"
colorama = "^0.4.6"
diffusers = "^0.30.3"
httpx = "^0.27.2"
nodriver = "^0.37"
pillow = "^10.4.0"
psutil = "^6.0.0"
PyQt6 = "^6.7.1"
PyQt6-sip = "^13.8.0"
python-dotenv = "^1.0.1"
sentry-sdk = "^2.14.0"

[tool.poetry.group.dev.dependencies]
Nuitka = "^2.4.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
